@@ -2,7 +2,7 @@
 #
 # Wrapper of the core [try] command 
 #
-# $Id $
+# $Id$
 #
 
 namespace eval ::rivet {
@@ -10,11 +10,11 @@ namespace eval ::rivet {
     proc try {script args} {
 
         uplevel [list ::try $script trap {RIVET ABORTPAGE} {} {
-                return -errorcode ABORTPAGE -code error
-            } trap {RIVET EXITPAGE} {} {
-                return -errorcode EXITPAGE -code error
-            } {*}$args]
+            return -errorcode {RIVET ABORTPAGE} -code error
+        } trap {RIVET THREAD_EXIT} {} {
+            return -errorcode {RIVET THREAD_EXIT} -code error
+        } {*}$args]
 
     }
-}
 
+}
