@@ -1,3 +1,9 @@
+2016-11-15 Massimo Manghi <mxmanghi@apache.org>
+    * rivet/rivet-tcl/catch.tcl|try.tcl: better
+    script evaluation is catch/try construct, 
+    specified complete ::rivet::abort_page generated 
+    error codes
+
 2016-11-09 Massimo Manghi <mxmanghi@apache.org>
     * src/mod_rivet/mod_rivet_common.c: the request_rec
     field to be checked in order to determine whether we
